# CAMEL

./: .gitignore  README.md  pyproject.toml
configs/camel_config/: llama_2_chat_13B_config.json  llama_2_chat_70B_config.json  llama_2_chat_7B_config.json
configs/train_config/: llama_2_chat_7B_train_config.json
notebooks/: mask.ipynb
scripts/data_generation/: data_generation.py  main.py  prompt.py
scripts/evaluate/: evaluate.py  evaluate_base.py  main.py  speed.py
scripts/train/: main.py  train.py  train_config.py
src/camel/: __init__.py  camel_model.py  camel_modifier.py  modeling_outputs.py  modifier_outputs.py
src/camel/models/: camel_model.py
src/camel/models/llama/: configuration_llama.py  modeling_llama.py  modifier_llama.py
src/camel/utils/: choices.py  tree.py
src/camel_modifier/: camel_model.py  camel_modifier.py
src/camel_modifier/models/llama/: modifier_llama.py
src/camel_modifier/utils/: cache.py  logits_precessor.py  tree.py
