[tool.poetry]
name = "modifier"
version = "0.0.3"
description = "CAMEL: Context-Aware Modifier for Efficient Language model"
authors = ["Welles Sun <welles.sun@zju.edu.cn>"]
readme = "README.md"
packages = [{include = "camel", from = "src"}]
repository = "https://github.com/CSWellesSun/CAMEL"
license = "Apache-2.0" 

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.0"
torch = { version = "^2.3.0", source = "pytorch" }
datasets = "^2.19.1"
transformers = "^4.41.0"
fastchat = "^0.1.0"
accelerate = "^0.30.1"
wandb = "^0.17.0"
sentencepiece = "^0.2.0"
shortuuid = "^1.0.13"
ray = "^2.23.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
